[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pytz>=2025.2",
    "requests-cache>=1.2.1",
    "requests>=2.32.4",
    "sendgrid>=6.12.4",
    "streamlit>=1.46.1",
    "trafilatura>=1.6.1",
    "yfinance>=0.2.65",
]
